--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<h1>hello world</h1>
-<p>this is my first web page</p>
-<h2>hi </h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+ <title>Asitha Divisekara</title>
+</head>
 
+<body>
+ I am learning web designing
+</body>
+</html>
