--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
- <head>
-
-  
- </head>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Document I am done wiht this</title>
+</head>
+<body>
+ I am speechless
+</body>
 </html>
