--- a/sample.html
+++ b/sample.html
@@ -12,8 +12,15 @@ First webpage
 <body>
 
 <h1>Hello my name is asitha</h1>
+<h2>Hello my name is asitha</h2>
+<h3>Hello my name is asitha</h3>
+<h4>Hello my name is asitha</h4>
+<h5>Hello my name is asitha</h5>
+<h6>Hello my name is asitha</h6>
+<h7>Hello my name is asitha</h7>
+<h8>Hello my name is asitha</h7>
 
-<p> This is my first web page.</p>
+<p>This is my first web page.</p>
 
 
 </body>
