--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -22,9 +22,13 @@ First webpage
 
 <p>This is my first web page.</p>
 
+<!--Including images to the web page on a local folder or on internet-->
+
+<h3>Image 1</h3>
+<img src="./images/image1.jpg" height="340" width="546" alt="This is the image 1">
+
+<h3>Image 2</h3>
+<img src="./images/image2.jpg" width="338" height="338" alt="This is the image 2">
 
 </body>
-
-
-
 </html>
