--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document I am done wiht this</title>
+ <title>Asitha Divisekara</title>
 </head>
 <body>
+ 
+<h1 id="top"></h1>Top of the page</h1>
 
- I am speechless
- 
- <h1>I am asitha</h1>
- <h2>I am asitha</h2>
- <h3>I am asitha</h3>
- <h4>I am asitha</h4>
- <h5>I am asitha</h5>
- <h6>I am asitha</h6>
- <h7>I am asitha</h7>
- <h8>I am asitha</h8>
- 
+
+<h3>Go to my about page</h3>
+<a href="about.html"><h2>About</h2></a>
+<a href="contact.html"><h2>Contact me</h2></a>
+
+ <h1>I am Asitha</h1>
+
  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, voluptates?</p>
  
  <h3>Image is about environment</h3>
@@ -39,8 +37,18 @@
  
  <br>
  <br>
- 
  <!--This is a comment.-->
- 
+
+ <a href="https://www.linkedin.com/in/asitha-divisekara-b2419a191/" target="_blank"><h3>asithas linkedin acccount</h3></a>
+
+  <br>
+  <br>
+
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum eius doloribus possimus cum commodi vel et voluptas ipsam ullam itaque, animi amet atque adipisci nulla! Totam, odio? Magni amet quaerat aut libero quibusdam minus eveniet cumque rerum, molestias ducimus maxime at unde? Quo numquam necessitatibus nobis non placeat vel atque at expedita! Perferendis adipisci, odit, sequi possimus perspiciatis rem recusandae inventore, dolorem velit corrupti pariatur sint rerum consectetur! Expedita dolorem aliquam quaerat facere animi magni temporibus corrupti quos totam magnam, hic quia tempora? Labore excepturi deserunt temporibus neque. Repudiandae accusamus eveniet delectus inventore numquam? Quibusdam culpa porro natus vitae iure.</p>
+
+
+
+
+  <a href=#top>Back to the top</a>
 </body>
 </html>
