--- a/sample.html
+++ b/sample.html
@@ -2,25 +2,69 @@
 <html>
 
 <head>
-
 <title>
 First webpage
 </title>
 
 </head>
 
+
+
 <body>
 
 <h1>Hello my name is asitha</h1>
-<h2>Hello my name is asitha</h2>
-<h3>Hello my name is asitha</h3>
-<h4>Hello my name is asitha</h4>
-<h5>Hello my name is asitha</h5>
-<h6>Hello my name is asitha</h6>
-<h7>Hello my name is asitha</h7>
-<h8>Hello my name is asitha</h7>
+
+<a href="about.html"><h2>ABOUT</h2></a>
+<a href="contact.html"><h2>CONTACT ME</h2></a>
 
 <p>This is my first web page.</p>
+
+
+<form action="" method="">
+<label for='name'>Name</label>
+<input type="text" name="NAME" id="name">
+<br>
+
+<label for='password'>Password</label>
+<input type="text" placeholder="9ASItha7@" name="PASSWORD" id="password">
+<br>
+
+<label for="email">E-mail</label>
+<input type="email" name="EMAIL" id="email" value="9asitha7@gmail.com">
+<br>
+
+<label for="essay">Put your essay here</label>
+<br>
+<textarea name="ESSAY" id="essay" cols=50 rows=10></textarea>
+
+
+<br>
+<br>
+<br>
+
+<label for="language">What is the most favourite coding language?</label>
+<br>
+<input type="radio" name="coding" id="javascript">Javascript
+<input type="radio" name="coding" id="python">Python
+<input type="radio" name="coding" id="CPP">CPP
+<br>
+
+<p>Please select your favourite coding langauage</p>
+
+
+
+<br>
+<input type="submit" value="Please Submit">
+
+
+<!--
+<button type="submit">submit</button>
+-->
+
+</form>
+
+
+
 
 <!--Including images to the web page on a local folder or on internet-->
 
@@ -43,11 +87,40 @@ First webpage
 <br>
 <br>
 
-<a href="">asithas website
+<a href="https://www.linkedin.com/in/asitha-divisekara-b2419a191/" target=_balnk>asithas Linkedin account</a>
 
 <br>
 <br>
 <br>
 
+
+<p>
+Lorem, <sup>ipsum dolor sit amet</sup> consectetur adipisicing elit. <sub>Laborum eius doloribus possimus cum</sub> commodi vel et voluptas ipsam ullam itaque, animi amet atque adipisci nulla! Totam, odio? Magni amet quaerat aut libero <strong>quibusdam minus eveniet cumque rerum,</strong> molestias ducimus maxime at unde? Quo numquam necessitatibus <em>nobis non placeat vel atque at expedita! </em>Perferendis adipisci, odit, sequi possimus perspiciatis rem recusandae inventore, dolorem velit corrupti pariatur sint rerum consectetur! Expedita dolorem aliquam quaerat facere animi magni temporibus corrupti quos totam magnam, hic quia tempora? Labore excepturi deserunt temporibus neque. Repudiandae accusamus eveniet delectus inventore numquam? Quibusdam culpa porro natus vitae iure.
+</p>
+
+
+<ul>
+<li>asitha</li>
+	<ol>
+	<li>html</li>
+	<li>css</li>
+	<li>java</li>
+	</ol>
+<li>indrajith</li>
+<li>divisekara</li>
+</ul>
+
+<tr>
+<th>Asitha</th>
+<th>indrajith</th>
+<th>divisekara</th>
+</tr>
+
+<br>
+<br>
+
+<a href="#top">Go to top of the page</a>
+
+<h1>copyrights &copy;</h1>
 </body>
 </html>
