--- a/sample.html
+++ b/sample.html
@@ -44,27 +44,34 @@ First webpage
 
 <label for="language">What is the most favourite coding language?</label>
 <br>
-<input type="radio" name="coding" id="javascript">Javascript
-<input type="radio" name="coding" id="python">Python
-<input type="radio" name="coding" id="CPP">CPP
+<input type="radio" value="javascript" name="coding" id="javascript">Javascript
+<input type="radio" value="python" name="coding" id="python">Python
+<input type="radio" value="cpp" name="coding" id="CPP">CPP
 <br>
 
-<p>Please select your favourite coding langauage</p>
+<p>Please select your favourite coding langauage?</p>
+
+<input type="checkbox" value="java" name="programming" id="java" checked="checked">Java
+<input type="checkbox" value="matlab" name="programming" id="matlab">Matlab
+<input type="checkbox" value="assembly" name="programming" id="assembly">Assembly
+<br>
+
+<select name="languages" id="">
+<option value="javascript">Javascript</option>
+<option value="python">Python</option>
+<option value="assembly">Assembly</option>
+</select>
 
 
-
+<br>
 <br>
 <input type="submit" value="Please Submit">
-
 
 <!--
 <button type="submit">submit</button>
 -->
 
 </form>
-
-
-
 
 <!--Including images to the web page on a local folder or on internet-->
 
