--- a/sample.html
+++ b/sample.html
@@ -6,16 +6,22 @@
 First webpage
 </title>
 
+<style type="text/css">
+	h3{
+		color:green;
+	}
+</style>
+
 </head>
-
-
 
 <body>
 
-<h1>Hello my name is asitha</h1>
+<h1 style="color:red" >Hello my name is asitha</h1><!-- internel method of css-->
 
 <a href="about.html"><h2>ABOUT</h2></a>
 <a href="contact.html"><h2>CONTACT ME</h2></a>
+
+
 
 <p>This is my first web page.</p>
 
