--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <h1>I am Asitha</h1>
 
  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, voluptates?</p>
- </div>>
+ </div>
 
 <div class="imageArea">
  <h3>Image is about environment</h3>
@@ -49,12 +49,20 @@
  <a href="https://www.linkedin.com/in/asitha-divisekara-b2419a191/" target="_blank"><h3>asithas linkedin acccount</h3></a>
 
   <br>
+<div class ="container">
+ <div class="para2">
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum eius doloribus possimus cum commodi vel et voluptas ipsam ullam itaque, animi amet atque adipisci nulla! Totam, odio? Magni amet quaerat aut libero quibusdam minus eveniet cumque rerum, molestias ducimus maxime at unde? Quo numquam necessitatibus nobis non placeat vel atque at expedita! Perferendis adipisci, odit, sequi possimus perspiciatis rem recusandae inventore, dolorem velit corrupti pariatur sint rerum consectetur! Expedita dolorem aliquam quaerat facere animi magni temporibus corrupti quos totam magnam, hic quia tempora? Labore excepturi deserunt temporibus neque. Repudiandae accusamus eveniet delectus inventore numquam? Quibusdam culpa porro natus vitae iure.</p>
 
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum eius doloribus possimus cum commodi vel et voluptas ipsam ullam itaque, animi amet atque adipisci nulla! Totam, odio? Magni amet quaerat aut libero quibusdam minus eveniet cumque rerum, molestias ducimus maxime at unde? Quo numquam necessitatibus nobis non placeat vel atque at expedita! Perferendis adipisci, odit, sequi possimus perspiciatis rem recusandae inventore, dolorem velit corrupti pariatur sint rerum consectetur! Expedita dolorem aliquam quaerat facere animi magni temporibus corrupti quos totam magnam, hic quia tempora? Labore excepturi deserunt temporibus neque. Repudiandae accusamus eveniet delectus inventore numquam? Quibusdam culpa porro natus vitae iure.</p>
-
+   </div>
+ </div>
 
 
 
   <a href=#top>Back to the top</a>
+<br>
+<br>
+<br>
+<br>
+
 </body>
 </html>
