--- a/index.html
+++ b/index.html
@@ -58,9 +58,20 @@
    </div>
  </div>
 
+ <div class="category1">
+  <h2>CSS to Unodered list</h2>
+  <ul>
+   <li><a href=#>category 1</a></li>
+   <li><a href=#>category 2</a></li>
+   <li><a href=#>category 3</a></li>
+   <li><a href=#>category 4</a></li>
+  </ul>
+ </div>
+
 
 
   <a href=#top>Back to the top</a>
+
 <br>
 <br>
 <br>
