--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
    </div>
  </div>
 
+
+ <form class="my-form">
+  <div class="form-group">
+   <label>Name: </label>
+   <input type="text" name="name">
+  </div>
+  
+   <div class="form-group">
+   <label>E-mail: </label>
+   <input type="text" name="email" value="9asitha7@gmail.com">
+  </div>
+   
+  <div class="form-group">
+   <label>Password: </label>
+   <input type="text" placeholder="9ASItha7@" name="password">
+  </div>
+
+  <input type="submit" value="Please submit">
+  </form>
+ 
+ 
+
  <div class="category1">
   <h2>CSS to Unodered list</h2>
   <ul>
@@ -75,7 +97,34 @@
 <br>
 <br>
 <br>
+
+
+
+<br>
+<br>
+<br>
 <br>
 
+<form action="" method="">
+ <label for='name'>Name</label>
+ <input type="text" name="NAME" id="name">
+ <br>
+ 
+ <label for='password'>Password</label>
+ <input type="text" placeholder="9ASItha7@" name="PASSWORD" id="password">
+ <br>
+ 
+ <label for="email">E-mail</label>
+ <input type="email" name="EMAIL" id="email" value="9asitha7@gmail.com">
+ <br>
+ 
+ <label for="essay">Put your essay here</label>
+ <br>
+ <textarea name="ESSAY" id="essay" cols=50 rows=10></textarea>
+ 
+
+
+
+<div style="margin-top:100px;"></div>
 </body>
 </html>
