--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  
- <div class="mainTwoLines"> 
+ <div class="mainTwoLines">                <!-- div stands for dividing-->
   <h1 id="top"></h1>Top of the page</h1>
   <h3>Go to my about page</h3>
  </div>
@@ -102,3 +102,6 @@
 <div style="margin-top:100px;"></div>
 </body>
 </html>
+
+
+
