--- a/course1-ntroduction to HTML/sample.html
+++ b/course1-ntroduction to HTML/sample.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPe html>
 <head>
-<meta charset = "UTF-8">
-
-<title>My frist web page</title>
-
+	<meta lang="en" charset="UTF-8">
+	<title>This is my first page</title>
 </head>
 
-
 <body>
-<h1>Hello asitha</h1>
-
-
-
+	<h1>Hello asitha</h1>
+	<main><p>This is my main code</p></main>
+	<footer>
+		<p>Think of a more interesting footer</p>
+	</footer>
 </body>
 </html>
