--- a/course1-ntroduction to HTML/sample.html
+++ b/course1-ntroduction to HTML/sample.html
@@ -6,12 +6,93 @@
 </head>
 
 <body>
+	
+	<ol>
+	<li>Vegetables</li>
+	
+<li>Fruit
+ 
+		<ul>
+		<li>Blueberries</li>
+	  
+		<li>Bananas</li>
+       
+		</ul>
+    
+	</li>
+
+	</ol>
+		
+
+	<table border="1">
+	<tr> <th>Row one</th> <th>Row two</th> <th>row </th> </tr>
+	<tr><td>one</td> <td>two</td> <td>three</td> </tr>
+	<tr><td>four</td> <td>five</td> <td>six</td> </tr>
+	<tr><td>seven</td> <td>eight</td> <td>nine</td> </tr>
+
+	</table>
+	
+	<hr>
+
 	<h1>Hello asitha</h1>
 	<main><p>This is my main code</p></main>
+
+	<figure>
+		<img src="./media/asitha1.png" width="200" height="200" alt="This is my photo">
+		<figcaption>Relative image width =200 pixels height=200pixels</figcaption>
+
+		<br><br><br>
+	
+	<hr>
+	
+		<img src="./media/asitha2.jpg" width="20%" alt="this is wild asitha">
+		<figcaption>Relative image width="20 percent"</figcaption>
+
+	</figure>
+	
+	<hr>
+
+	<h1>Video playing</h1>
+	<video src="./media/cradlesCut1.mp4" width="500" controls loop>
+	Your browser does not support the element. <code>video</code>
+	</video>
+
+	<hr>
+
+	<video src="./media/videosong1.mp4" width="500" controls loop>
+	Your browser does not support the element. <code>video</code>
+	</video>
+
+	<hr>
+
+	<audio src="./media/crabRave.mp3#t=2:10" controls>Crab rave song in mp3</audio>
+
+	<hr>
+	<progress value="70" max="100">70 % </progress>
+	</hr>
+	<br><br><br><br><br><br><br><br>
+
+	<iframe src="./media/asitha1.png"></iframe>
+
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<footer>
 		<p>Think of a more interesting footer</p>
 	</footer>
+
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
