--- a/CSS grid/cssGrid.html
+++ b/CSS grid/cssGrid.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
     <head>
+
         <neta charset="UTF-8" />
-        <meta name="viewport">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie-edge" />
+        <link rel="stylesheet" href="./style.css" />
+
         <title>Learning CSS grid</title>
     </head>
 
     <body>
+        <main>
+            
+            <div class="box1"> 
+                <h1>box 1</h1>
+            </div>
 
-        <div class="box1"> 
-            <h1>box 1</h1>
-        </div>
+            <div class="box2">
+                <h1>box 2</h1>
+            </div>
 
-        <div class="box2">
-            <h1>box 2</h1>
-        </div>
+            <div class="box3">  
+                <h1>box 3</h1>
+            </div>
 
-        <div>  
-            <h1>box 3</h1>
-        </div>
-
+        </main>
     </body>
 </html>     
 
