--- a/course4 - Angela yu/bootstrap/index.html
+++ b/course4 - Angela yu/bootstrap/index.html
@@ -59,5 +59,60 @@
 
     <h1>Hello World</h1>
     <button class="btn btn-dark" >Asithaya</button>
+
+    <div class="row" style="margin: 1em; padding: 1em; border: 2px solid green;">
+
+        <div class="col" style= "background-color:red; border: 1px solid; padding: 1em; margin: 1em;">
+            <h2>col</h2>
+        </div>
+
+        <div class="col" style= "background-color:red; border: 1px solid; padding: 1em; margin: 1em;">
+            <h2>col</h2>
+        </div>
+
+        <div class="col" style= "background-color:red; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col</h2>
+        </div>
+
+    </div>
+
+
+    <div class="row" style= "padding: 1em; margin: 1em; border: 2px solid purple;">
+
+        <div class="col-6" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-6</h2>
+        </div>
+
+        <div class="col-3" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-3</h2>
+        </div>
+
+        <div class="col-2" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-2</h2>
+        </div>
+
+    </div>
+
+
+    <div class="row" style= "padding: 1em; margin: 1em; border: 2px solid orange;">
+
+        <div class="col-lg-3 col-md-4 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-md-3</h2>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-md-3</h2>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-md-3</h2>
+        </div>
+
+        <div class="col-lg-2 col-md-3 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
+            <h2>col-md-3</h2>
+        </div>
+
+    </div>
+
 </body>
 </html>
