--- a/course4 - Angela yu/bootstrap/index.html
+++ b/course4 - Angela yu/bootstrap/index.html
@@ -6,17 +6,12 @@
     <title>Bootstap Learning</title>
 
     <link rel="stylesheet" href="styles.css">
-    
-    <!-- <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> -->
-
+ 
     <!--bootstrap.min.css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> 
 
     <!--jquery-3.4.1.slim.min.js-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
-    <!--popper.min.js   for the toggler menu popper is not needed-->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
 
     <!--bootstrap.min.js-->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -35,7 +30,6 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
  
-            
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item">
@@ -57,41 +51,10 @@
         </div>
     </nav>
 
-    <h1>Hello World</h1>
-    <button class="btn btn-dark" >Asithaya</button>
-
-    <div class="row" style="margin: 1em; padding: 1em; border: 2px solid green;">
-
-        <div class="col" style= "background-color:red; border: 1px solid; padding: 1em; margin: 1em;">
-            <h2>col</h2>
-        </div>
-
-        <div class="col" style= "background-color:red; border: 1px solid; padding: 1em; margin: 1em;">
-            <h2>col</h2>
-        </div>
-
-        <div class="col" style= "background-color:red; border: 1px solid; margin: 1em; padding: 1em;">
-            <h2>col</h2>
-        </div>
-
-    </div>
-
-
-    <div class="row" style= "padding: 1em; margin: 1em; border: 2px solid purple;">
-
-        <div class="col-6" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
-            <h2>col-6</h2>
-        </div>
-
-        <div class="col-3" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
-            <h2>col-3</h2>
-        </div>
-
-        <div class="col-2" style="background-color:green; border: 1px solid; margin: 1em; padding: 1em;">
-            <h2>col-2</h2>
-        </div>
-
-    </div>
+    <h1>Learn a New Language Today!</h1>
+    <button class="btn btn-dark" style="" >Asithaya</button>
+    <button class="btn btn-dark" style="" >Sign In</button>
+    <button class="btn btn-dark" style="" >Join</button>
 
 
     <div class="row" style= "padding: 1em; margin: 1em; border: 2px solid orange;">
