--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lanvage</title>
 
-    
     <link rel="stylesheet" href="styles.css">
  
     <!--bootstrap.min.css-->
@@ -20,6 +21,23 @@
 </head>
 
 <body>
+
+    <img src="./media/1.jpg" alt="first image" height=200px width=300px />
+
+    <img src="./media/2.jpg" alt="second image" height=200px width=300px />
+
+    <img src="./media/3.jpg" alt="third image" height=200px width=300px />
+
+    <img src="./media/4.jpg" alt="fourth image" height=200px width=300px />
+
+    <img src="./media/5.jpg" alt="fifth image" height=200px width=300px />
+
+    <img src="./media/6.jpg" alt="sixth image" height=200px width=300px />
+
+    <img src="./media/7.jpg" alt="seventh image" height=200px width=300px />
+
+    <img src="./media/8.jpg" alt="eighth image" height=200px width=300px />
     
 </body>
+
 </html>
