--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -38,6 +38,47 @@
 
     <img src="./media/8.jpg" alt="eighth image" height=200px width=300px />
     
+
+
+
+    <div id="carouselSlider" class="carousel slide" data-ride="carousel">
+
+        <div class="carousel-inner">
+
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="./media/1.jpg" alt="first slide" height="200" width="300" />
+            </div>
+
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="./media/2.jpg" alt="second slide" height="200" width="300" />
+            </div>
+
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="./media/3.jpg" alt="third slide" height="200" width="300" />
+            </div>
+
+        </div>
+    </div>
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="./media/1.jpg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./media/2.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="./media/3.jpg" alt="Third slide">
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+
 </body>
 
 </html>
