--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <img src="./media/1.jpg" alt="first image" height=200px width=300px />
+    <!-- <img src="./media/1.jpg" alt="first image" height=200px width=300px />
 
     <img src="./media/2.jpg" alt="second image" height=200px width=300px />
 
@@ -37,45 +37,28 @@
     <img src="./media/7.jpg" alt="seventh image" height=200px width=300px />
 
     <img src="./media/8.jpg" alt="eighth image" height=200px width=300px />
-    
+     -->
 
 
 
-    <div id="carouselSlider" class="carousel slide" data-ride="carousel">
+    <div id="carouselSlider" class="carousel slide" data-ride="carousel" data-interval="3000" style="padding: 1em; border: 2px solid; height: 500px; width: 1000px;" >
 
         <div class="carousel-inner">
 
             <div class="carousel-item active">
-                <img class="d-block w-100" src="./media/1.jpg" alt="first slide" height="200" width="300" />
+                <img class="d-block w-100" src="./media/1.jpg" alt="first slide" />
             </div>
 
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="./media/2.jpg" alt="second slide" height="200" width="300" />
+            <div class="carousel-item">
+                <img class="d-block w-100" src="./media/2.jpg" alt="second slide" />
             </div>
 
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="./media/3.jpg" alt="third slide" height="200" width="300" />
-            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="./media/8.jpg" alt="third slide" />
 
+            </div>
         </div>
     </div>
-
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="./media/1.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="./media/2.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="./media/3.jpg" alt="Third slide">
-          </div>
-        </div>
-      </div>
-
-
-
 
 
 
