--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -40,10 +40,9 @@
      -->
 
 
+    <div id="carouselSlider" class="carousel slide" data-ride="carousel" data-interval="2000" >
 
-    <div id="carouselSlider" class="carousel slide" data-ride="carousel" data-interval="3000" style="padding: 1em; border: 2px solid; height: 500px; width: 1000px;" >
-
-        <div class="carousel-inner">
+        <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item active">
                 <img class="d-block w-100" src="./media/1.jpg" alt="first slide" />
