--- a/course4 - Angela yu/bootstrap/index.html
+++ b/course4 - Angela yu/bootstrap/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="styles.css">
  
-    <!--bootstrap.min.css-->
+    <!-- bootstrap.min.css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> 
 
     <!--jquery-3.4.1.slim.min.js-->
@@ -51,12 +51,14 @@
         </div>
     </nav>
 
+
+    <!------------------- Adrdress bar ------------------>
     <h1>Learn a New Language Today!</h1>
-    <button class="btn btn-dark" style="" >Asithaya</button>
+    <button class="btn btn-dark" style="text-decoration: underline;" >Thushani</button>
     <button class="btn btn-dark" style="" >Sign In</button>
     <button class="btn btn-dark" style="" >Join</button>
 
-
+    <!-------------------Bootstrap Grid ------------->
     <div class="row" style= "padding: 1em; margin: 1em; border: 2px solid orange;">
 
         <div class="col-lg-3 col-md-4 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
@@ -71,11 +73,11 @@
             <h2>col-md-3</h2>
         </div>
 
-        <div class="col-lg-2 col-md-3 col-sm-5" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
+        <div class="col-lg-2 col-md-3 col-sm-3" style="background-color:yellowgreen; border: 1px solid; margin: 1em; padding: 1em;">
             <h2>col-md-3</h2>
         </div>
 
     </div>
-
+    <!----------------- Bootstrap grid is over  ---------------------->
 </body>
 </html>
