--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" >
 
 <head>
 
@@ -40,7 +40,11 @@
      -->
 
 
-    <div id="carouselSlider" class="carousel slide" data-ride="carousel" data-interval="2000" >
+     <div class="alert alert-primary" role="alert" >
+        You account has been disabled!.
+      </div>
+
+    <div id="carouselSlider" class="carousel slide" data-ride="carousel" data-interval="3000" >
 
         <div class="carousel-inner" role="listbox">
 
@@ -54,12 +58,9 @@
 
             <div class="carousel-item">
                 <img class="d-block w-100" src="./media/8.jpg" alt="third slide" />
-
             </div>
         </div>
     </div>
-
-
 
 </body>
 
