--- a/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
+++ b/Responsive Bootstrap website  full screen image slider using bootstrap, HTML, CSS/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+    <div class="redda">
     <!-- <img src="./media/1.jpg" alt="first image" height=200px width=300px />
 
     <img src="./media/2.jpg" alt="second image" height=200px width=300px />
@@ -38,8 +38,9 @@
 
     <img src="./media/8.jpg" alt="eighth image" height=200px width=300px />
      -->
+     </div>
 
-
+     
      <div class="alert alert-primary" role="alert" >
         You account has been disabled!.
       </div>
