--- a/course4 - Angela yu/tindog/index.html
+++ b/course4 - Angela yu/tindog/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    
+
     <meta charset="utf-8">
     <title>TinDog</title>
     
@@ -60,7 +60,7 @@
     <div class="row">
 
         <div class="col-lg-6">
-            <h1 id="titleHeading" >Meet new and interesting dogs nearby.</h1>
+            <h1>Meet new and interesting dogs nearby.</h1>
             <button type="button">Download</button>
             <button type="button">Download</button>
         </div>
