--- a/course4 - Angela yu/tindog/index.html
+++ b/course4 - Angela yu/tindog/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <title>TinDog</title>
+    <link rel="icon" href="favicon.ico" type="image/ico" sizes="16x16">
     
     <!--Google embedded fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
