--- a/course Intriduction To Html/index.html
+++ b/course Intriduction To Html/index.html
@@ -5,10 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-color: #44CCDD;
+        }
+    </style>
 </head>
 
 
-<body>
+<body style="background-color: #ffffff;">
     <h1>Asitha Divisekara</h1>
 
     <section>
